k8s/services/media/app/jellyseerr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  replicas: 0
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: jellyseerr
          image: ghcr.io/hotio/jellyseerr
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jellyseerr-data
      nodeSelector:
        k8s.as212024.net/role: media
      tolerations:
        - key: k8s.as212024.net/role
          operator: Equal
          value: media
          effect: NoExecute
