k8s/services/media/app/jellyseerr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
